--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <p id="time"></p>
 
         <hr>
+
+        <ul>
+            <li id="departuresBullet"><span>More Departures</span></li>
+            <li id="equalBullet"><span>Equal Arrivals/Departures</span></li>
+            <li id="arrivalsBullet"><span>More Arrivals</span></li>
+            <li id="noneBullet"><span>No Arrivals/Departures</span></li>
+        </ul>
+
+        <hr>
         <div id="stopinfo">
 
         </div>
@@ -30,7 +39,7 @@
 
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script type="text/javascript" src="http://d3js.org/queue.v1.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/1.8.0/d3-legend.min.js"></script>
 <script src="js/vis.js"></script>
 </body>
 </html>
